--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"></img></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"/></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -189,9 +189,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img src="./projects/images/omni_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Add New Camera"><img src="./projects/images/omni_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Play Video"><img src="./projects/images/omni_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img alt="Omnivison - main window" src="./projects/images/omni_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Add New Camera"><img alt="Omnivison - add new camera"  src="./projects/images/omni_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Play Video"><img alt="Omnivison - play video" src="./projects/images/omni_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -219,9 +219,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Easy Mode"><img src="./projects/images/Hex_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Advanced Mode"><img src="./projects/images/Hex_03.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Free jam"><img src="./projects/images/Hex_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Easy Mode"><img alt="Hexagonal Melody - Simon says mode"  src="./projects/images/Hex_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Advanced Mode"><img alt="Hexagonal Melody - Simon says advanced mode" src="./projects/images/Hex_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Free jam"><img alt="Hexagonal Melody - Free jam mode" src="./projects/images/Hex_02.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -248,9 +248,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img src="./projects/images/Ascii_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Capture images from IP cam"><img src="./projects/images/Ascii_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Editing options"><img src="./projects/images/Ascii_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img alt="ImageToASCII - main window" src="./projects/images/Ascii_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Capture images from IP cam"><img alt="ImageToASCII - capture images from IP cam" src="./projects/images/Ascii_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Editing options"><img alt="ImageToASCII - editing options" src="./projects/images/Ascii_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -277,9 +277,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img src="./projects/images/Block_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Game"><img src="./projects/images/Block_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Different Color Scheme"><img src="./projects/images/Block_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img alt="Block Runner Rampage - main window" src="./projects/images/Block_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Game"><img alt="Block Runner Rampage - Game" src="./projects/images/Block_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Different Color Scheme"><img alt="Block Runner Rampage - Color scheme" src="./projects/images/Block_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -306,9 +306,9 @@
                         <p><b>Note: </b>Application requires XAMPP and the specific database which can be imported from the project folder.</p>
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Login Window"><img src="./projects/images/FoodlyApp_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img src="./projects/images/FoodlyApp_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window - alternate"><img src="./projects/images/FoodlyApp_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Login Window"><img alt="Foodly - login window" src="./projects/images/FoodlyApp_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window"><img alt="Foodly - main window" src="./projects/images/FoodlyApp_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Main Window - alternate"><img alt="Foodly - main window"  src="./projects/images/FoodlyApp_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -336,9 +336,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Restaurant picker"><img src="./projects/images/FoodlyWeb_03.gif" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Pizza Customization"><img src="./projects/images/FoodlyWeb_01.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Restaurant picker"><img alt="Foodly - Restaurant picker"  src="./projects/images/FoodlyWeb_03.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img alt="Foodly - Webshop"  src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Pizza Customization"><img alt="Foodly - Customization"  src="./projects/images/FoodlyWeb_01.gif" class="thumbnail img-responsive"></a></div>
                             <p><b>Note: </b>Some features requires XAMPP and the specific database which can be imported from the project folder.</p>
                         </div>
                     </div>
@@ -367,8 +367,8 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Logo design"><img src="./projects/images/EasyLearn_01.jpg" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Home page (WIP)"><img src="./projects/images/EasyLearn_02.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Logo design"><img alt="Logo"  src="./projects/images/EasyLearn_01.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Home page (WIP)"><img alt="Homepage"  src="./projects/images/EasyLearn_02.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -418,9 +418,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Code"><img src="./projects/images/Kernel_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Edge Detection Kernel"><img src="./projects/images/Kernel_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Blur Kernel"><img src="./projects/images/Kernel_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Code"><img alt="Code"  src="./projects/images/Kernel_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Edge Detection Kernel"><img alt="Edge detection" src="./projects/images/Kernel_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Blur Kernel"><img alt="Blur image" src="./projects/images/Kernel_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -446,9 +446,9 @@
                         <p>During 2014. I've had to make a Matlab model and simulation for a specific robotic manipulator. Project includes: direct kinematics, inverse kinematics, trajectory planning, object detection, mobile robot simulation, etc.</p>
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Robotic Manipulator"><img src="./projects/images/Robot_01.jpg" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Trajectory Simulation"><img src="./projects/images/Robot_02.jpg" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Object Detection"><img src="./projects/images/Robot_03.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Robotic Manipulator"><img alt="Robotic manipulator" src="./projects/images/Robot_01.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Trajectory Simulation"><img alt="Trajectory"  src="./projects/images/Robot_02.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Object Detection"><img alt="Object detection"  src="./projects/images/Robot_03.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -475,9 +475,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Line detection"><img src="./projects/images/Vision_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Position detection"><img src="./projects/images/Vision_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Object detection"><img src="./projects/images/Vision_03.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Line detection"><img alt="Line detection" src="./projects/images/Vision_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Position detection"><img alt="Position detection"  src="./projects/images/Vision_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Object detection"><img alt="Object detection"  src="./projects/images/Vision_03.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -505,9 +505,9 @@
                         <p><b>Note: </b>Application requires XAMPP and the specific database which can be imported from the project folder.</p>
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Database search"><img src="./projects/images/Histogram_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Database search - rotated blurred image"><img src="./projects/images/Histogram_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Histograms"><img src="./projects/images/Histogram_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Database search"><img alt="Database search" src="./projects/images/Histogram_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Database search - rotated blurred image"><img alt="Database search" src="./projects/images/Histogram_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Histograms"><img alt="Histograms" src="./projects/images/Histogram_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -523,7 +523,6 @@
                 </footer>
             </div>
         </div><!-- /.container -->
-</div>
         <!-- Bootstrap core JavaScript -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
