--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"></img></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"/></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -622,7 +622,6 @@ Familiar
                 <p>© 2015 Adrian Bece </p>
             </footer>
         </div>
-        </div><!-- /.container -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
