--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"></img></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"/></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
