--- a/designs.html
+++ b/designs.html
@@ -53,7 +53,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"></img></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"/></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -204,9 +204,6 @@
             </footer>
         </div>
 
-
-        </div><!-- /.container -->
-        </div>
         <!-- Bootstrap core JavaScript -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
