--- a/designs.html
+++ b/designs.html
@@ -85,12 +85,12 @@
             <h2>Jamie Mallender</h2><hr />
             <div class="row">
                 <div class="col-md-3">
-                    <img class="img-respnsive gallery-thumbnail" src="./projects/designs/jm/01.jpg" alt="Return to bass album cover" /><br /><br />
+                    <img class="img-respnsive gallery-thumbnail" alt="Thumbnail" src="./projects/designs/jm/01.jpg" alt="Return to bass album cover" /><br /><br />
                 </div>
                 <div class="col-md-9">
                     <p>Since 2009. I've been working with a British musician Jamie Mallender who previously worked with members of Black Sabbath, Tony Martin, Ravenlord, T-Rex, etc. I've created cd covers and promo materials for his 2 albums: "Return to bass" and "Tunes from the mothership" released in 2009. and 2011., respectively.</p>
                     <p>Jamie has been a great friend of mine and fellow music-buff ever since we started working together. He gave me the job that kickstarted my interest in graphic design and I've kept honing my skills ever since. You can check out his albums and music by clicking on the buttons below.</p><br />
-                    <p><a class="btn btn-default" href="http://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-default" href="https://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a></br/></p>
+                    <p><a class="btn btn-default" href="http://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-default" href="https://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a><br/></p>
                 </div>
             </div>
             <hr />
@@ -98,30 +98,30 @@
             <div id="gallery_jm">
                 <div class="row">
                     <h4>Return to bass (2009.) </h4>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/01.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/02.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/03.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Return to bass" src="./projects/designs/jm/01.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Return to bass" src="./projects/designs/jm/02.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Return to bass" src="./projects/designs/jm/03.jpg" class="thumbnail img-responsive"></a></div>
                 </div>
                 <div class="row">
                     <h4>Music from the Mothership (2011.) </h4>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/04.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/05.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/06.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/07.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/04.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/05.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/06.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/07.jpg" class="thumbnail img-responsive"></a></div>
                 </div>
                 <div class="row">
                     <h4>Music from the Mothership - promo </h4>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/08.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/09.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/10.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/11.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/12.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/13.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/08.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/09.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/10.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/11.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/12.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Tunes from the mothership" src="./projects/designs/jm/13.jpg" class="thumbnail img-responsive"></a></div>
                 </div>
                 <div class="row">
                     <h4>Misc.</h4>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/14.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/jm/15.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Misc" src="./projects/designs/jm/14.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Misc" src="./projects/designs/jm/15.jpg" class="thumbnail img-responsive"></a></div>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
             <h2>IEEE - Student Branch Osijek</h2><hr />
             <div class="row">
                 <div class="col-md-2">
-                    <img class="img-respnsive gallery-thumbnail" src="./projects/designs/ieee/03.jpg" alt="Return to bass album cover" /><br /><br />
+                    <img alt="Thumbnail" class="img-respnsive gallery-thumbnail" src="./projects/designs/ieee/03.jpg" alt="Return to bass album cover" /><br /><br />
                 </div>
                 <div class="col-md-10">
                     <p>During 2012. and 2013. I've been a member of IEEE (Institute of Electrical and Electronics Engineers) and an Osijek branch treasurer for IEEE. During that time I've been tasked to create promo posters for various educational events and t-shirt designs. Educational events were held by experienced employees from various software and web development companies from Osijek like Inchoo, Betaware and Mono.</p>
@@ -154,12 +154,12 @@
             <h4 id="a_gallery_ieee">View images <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h4>
             <div id="gallery_ieee">
                 <div class="row">
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/ieee/01.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/ieee/02.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/ieee/03.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/ieee/04.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/ieee/05.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/ieee/06.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="IEEE" src="./projects/designs/ieee/01.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="IEEE" src="./projects/designs/ieee/02.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="IEEE" src="./projects/designs/ieee/03.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="IEEE" src="./projects/designs/ieee/04.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="IEEE" src="./projects/designs/ieee/05.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="IEEE" src="./projects/designs/ieee/06.jpg" class="thumbnail img-responsive"></a></div>
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
             <h2>Other designs</h2><hr />
             <div class="row">
                 <div class="col-md-3">
-                    <img class="img-respnsive gallery-thumbnail" src="./projects/designs/general/03.jpg" alt="Return to bass album cover" /><br /><br />
+                    <img alt="Thumbnail" class="img-respnsive gallery-thumbnail" src="./projects/designs/general/03.jpg" alt="Return to bass album cover" /><br /><br />
                 </div>
                 <div class="col-md-9">
                     <p>Some other notable design and art that I've done in the last 4 years like UI design for Software Startup Academy 2013. / 2014., band logo, poster design for the local university, Foodly presentation front page, texture for a 3D editing and modeling project, etc.</p>
@@ -178,12 +178,12 @@
             <h4 id="a_gallery_misc">View images <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h4>
             <div id="gallery_misc">
                 <div class="row">
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/general/01.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/general/02.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/general/03.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/general/07.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/general/04.jpg" class="thumbnail img-responsive"></a></div>
-                    <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/general/05.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Other" src="./projects/designs/general/01.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Other" src="./projects/designs/general/02.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Other" src="./projects/designs/general/03.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Other" src="./projects/designs/general/07.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Other" src="./projects/designs/general/04.jpg" class="thumbnail img-responsive"></a></div>
+                    <div class="col-md-2"><a class="lightbox-a" title=""><img alt="Other" src="./projects/designs/general/05.jpg" class="thumbnail img-responsive"></a></div>
                 </div>
                 <div class="row">
                     <div class="col-md-2"><a class="lightbox-a" title=""><img src="./projects/designs/general/06.jpg" class="thumbnail img-responsive"></a></div>
