--- a/contact.html
+++ b/contact.html
@@ -75,10 +75,10 @@
                     <p><b>Location: </b>Laslovo (Osijek)</p>
                     <h3>Social media</h3><br/>
                 <div class="social">
-  <a href="https://www.facebook.com/adrian.bece" target="_blank" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
-  <a href="https://twitter.com/AdrianBDesigns" target="_blank" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a>
-  <a href="https://github.com/codeAdrian/" target="_blank"  class="link github" target="_parent"><span class="fa fa-github-square"></span></a>
-  <a href="https://hr.linkedin.com/in/adrianbece" target="_blank"  class="link linkedin" target="_parent"><span class="fa fa-linkedin-square"></span></a>
+  <a href="https://www.facebook.com/adrian.bece" target="_blank" class="link facebook"><span class="fa fa-facebook-square"></span></a>
+  <a href="https://twitter.com/AdrianBDesigns" target="_blank" class="link twitter"><span class="fa fa-twitter"></span></a>
+  <a href="https://github.com/codeAdrian/" target="_blank"  class="link github"><span class="fa fa-github-square"></span></a>
+  <a href="https://hr.linkedin.com/in/adrianbece" target="_blank"  class="link linkedin"><span class="fa fa-linkedin-square"></span></a>
 </div>
 
 </div>
@@ -93,8 +93,6 @@
                     <p>© 2015 Adrian Bece </p>
                 </footer>
             </div>
-        </div><!-- /.container -->
-</div>
         <!-- Bootstrap core JavaScript -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
