--- a/designs.html
+++ b/designs.html
@@ -85,7 +85,7 @@
             <h2>Jamie Mallender</h2><hr />
             <div class="row">
                 <div class="col-md-3">
-                    <img class="img-respnsive gallery-thumbnail" alt="Thumbnail" src="./projects/designs/jm/01.jpg" alt="Return to bass album cover" /><br /><br />
+                    <img class="img-respnsive gallery-thumbnail" src="./projects/designs/jm/01.jpg" alt="Return to bass album cover" /><br /><br />
                 </div>
                 <div class="col-md-9">
                     <p>Since 2009. I've been working with a British musician Jamie Mallender who previously worked with members of Black Sabbath, Tony Martin, Ravenlord, T-Rex, etc. I've created cd covers and promo materials for his 2 albums: "Return to bass" and "Tunes from the mothership" released in 2009. and 2011., respectively.</p>
@@ -143,7 +143,7 @@
             <h2>IEEE - Student Branch Osijek</h2><hr />
             <div class="row">
                 <div class="col-md-2">
-                    <img alt="Thumbnail" class="img-respnsive gallery-thumbnail" src="./projects/designs/ieee/03.jpg" alt="Return to bass album cover" /><br /><br />
+                    <img class="img-respnsive gallery-thumbnail" src="./projects/designs/ieee/03.jpg" alt="IEEE" /><br /><br />
                 </div>
                 <div class="col-md-10">
                     <p>During 2012. and 2013. I've been a member of IEEE (Institute of Electrical and Electronics Engineers) and an Osijek branch treasurer for IEEE. During that time I've been tasked to create promo posters for various educational events and t-shirt designs. Educational events were held by experienced employees from various software and web development companies from Osijek like Inchoo, Betaware and Mono.</p>
@@ -168,7 +168,7 @@
             <h2>Other designs</h2><hr />
             <div class="row">
                 <div class="col-md-3">
-                    <img alt="Thumbnail" class="img-respnsive gallery-thumbnail" src="./projects/designs/general/03.jpg" alt="Return to bass album cover" /><br /><br />
+                    <img alt="Thumbnail" class="img-respnsive gallery-thumbnail" src="./projects/designs/general/03.jpg"/><br /><br />
                 </div>
                 <div class="col-md-9">
                     <p>Some other notable design and art that I've done in the last 4 years like UI design for Software Startup Academy 2013. / 2014., band logo, poster design for the local university, Foodly presentation front page, texture for a 3D editing and modeling project, etc.</p>
